CIV-9298 code clean (#1056)
* CIV-9298 rename enum ConsentAgreementCheckBox

* CIV-9298 GeneratePDFDocumentCallbackHandler

* CIV-9298 clean getJudgeVulnerabilityText

* CIV-9298 clean getJudgeHearingSupportReq

* CIV-9298 Remove this unused method parameter "hasRespondentVulnerabilityResponded".

* CIV-9298 refactor validateDateRanges

* CIV-9298 refactor isValid

* CIV-9298 JudicialDecision

* CIV-9298 check style

* CIV-9298 ignore case event enum warning

* CIV-9298 clean generalJudgeHeardFromText

* CIV-9298 clean general order template

* CIV-9298 clean applicationRequestForInformation

* CIV-9298 clean applicationRequestForInformation

* CIV-9298 clean CreateApplicationTaskHandler

* CIV-9298 fix new added Minor smells

* CIV-9298 fix new added major smells

* CIV-9298 reduce major smells

* CIV-9298 checkstyle

* CIV-9298 revert Element list

* CIV-9298 merge

* CIV-9298 merge